fix z-index of particles

--- a/src/style.css
+++ b/src/style.css
@@ -292,6 +292,7 @@ button:focus {
     background-size: cover !important;
     width: 100%;
     height: 100%;
+    z-index: -1 !important;
 }
 
 .home-header {
